# cortex

./: .gitignore  CONTRIBUTING.md  CRON-UPDATE-INSTRUCTIONS.md  DOGFOOD-REPORT.md  README.md  SKILL.md  package-lock.json  package.json  vitest.config.ts
bench/: recall-benchmark.ts  regression-check.ts
bench/results/: 2026-03-05.json
docs/: agent-integration.md  openclaw-cron-setup.md  openclaw-integration.md
listener/: README.md  pyproject.toml  requirements.txt
listener/cortex_listener/: __init__.py  audio.py  cli.py  config.py  daemon.py  ingest.py  transcribe.py
memory/: 2026-03-09.md
scripts/: README-TIMEOUT-FIX.md  auto-ingest-sessions.sh  backfill-graph.ts  compact-memory.sh  daily-maintenance.sh  dedup-existing.ts  import-chatgpt.ts  migrate-namespaces.ts  smart-curate.sh  watch-and-index.sh
src/: cli.ts  contradictions.ts  embeddings.ts  engine.ts  extract.ts  graph.ts  import.ts  ingest-sessions.ts  mcp-server.ts  schema.ts  scoring.ts  summarize.ts  tiers.ts  types.ts
tests/: consolidation.test.ts  decay.test.ts  engine.test.ts  scoring.test.ts  tiers.test.ts
